# scry

./: Cargo.toml  README.md
src/: contents.rs  main.rs  metadata.rs
