[package]
authors = ["Nathaniel Mott"]
categories = ["command-line-utilities"]
description = "stats for bards and wizards alike"
name = "scry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = {version = "4.3.19", features = ["derive"]}
eyre = "0.6.8"
users = "0.11.0"

[profile.release]
lto = true
strip = true
codegen-units = 1
